greeks changes made

--- a/src/marketwatch.html
+++ b/src/marketwatch.html
@@ -11,7 +11,7 @@
 <body>
     <header class="market-watch">
         Market Watch
-        <a href="index.html" class="home"> Home </a>
+        <a href="/index.html" class="home"> Home </a>
     </header>
 
     <button type="button" class="btn" onclick="getfivemindata()"> 5 MINS DATA</button>
@@ -32,7 +32,7 @@
         <tbody>
         </tbody>
     </table>
-    <script src="script.js"></script>
+    <script src="/src/script.js"></script>
 </body>
 
 </html>
