--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hari's Trading Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
@@ -13,10 +13,10 @@
         <a class="logo">Trading Dashboard</a>
         <nav>
             <ul class="nav-links">
-                <li><a href="marketwatch.html"> Market Watch</a></li>
-                <li><a href="greeks.html"> Greeks </a></li>
-                <li><a href="nifty.html"> Nifty</a></li>
-                <li><a href="watching.html"> Stocks</a></li>
+                <li><a href="/src/marketwatch.html"> Market Watch</a></li>
+                <li><a href="/src/greeks.html"> Greeks </a></li>
+                <li><a href="/src/nifty.html"> Nifty</a></li>
+                <li><a href="/src/watching.html"> Stocks</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +41,7 @@
             </tr>
         </tbody>
     </table>
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 
 </html>
